# im-automated-testing

./: .env  .env.template  .gitignore  README.md  justfile  pyproject.toml  pytest.ini
components/: dropdown.py  helpers.py  map.py  slider.py  tab_list.py
data/: config.py  test_cases.py
fixtures/: auth.py  mission.py  testrail.py
pages/: base_page.py  fleet_page.py  login_page.py  missions_page.py  rfd_page.py
scripts/: scrape.py
tests/: conftest.py  test_g47_map_capture_integration.py  test_g47_map_capture_regression.py
utils/: funcs.py  map.py  points.py  strings.py  testrail.py
