[project]
name = "im-automated-testing"
version = "0.1.0"
description = "Automated Regression and Integration testing for Skydio Cloud"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "playwright>=1.51.0",
    "pre-commit>=4.2.0",
    "pytest-base-url>=2.1.0",
    "pytest-flakefinder>=1.1.0",
    "pytest-playwright>=0.7.0",
    "pytest-xdist>=3.6.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "ruff>=0.11.6",
]


[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
]

[tool.pytest.ini_options]
addopts = '-m "not manual"'
markers='''
    testrail: marker containing testrail id
    manual: tests that should not be ran by default
    '''
